tests/errors/semantic/blocking/REMOVE_SET_INCOMPATIBLE_TYPES_2.py
# Expecting an argument of the same type as the elements of the set
# pylint: disable=missing-function-docstring, missing-module-docstring

a = {3j, 9j, 1j}
b = 3.6
a.remove(b)
